@@ -200,6 +200,10 @@
       correctly signal communication errors. Previously, such errors could
       lead to a segfault due to invalid memory access. Reported
       and debugged by Dmitriy Selivanov in \PR{17850}.
+
+      \item The \command{R CMD check <pkg>} gives a longer and more
+      comprehensible message when \file{DESCRIPTION} misses dependencies,
+      e.g., in \code{Imports:}; thanks to the contributors of \PR{17179}.
     }
   }
 }
